Completed Entire Work

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="rating">
                 <img src="https://cdn-icons-png.flaticon.com/512/2351/2351491.png" alt="" srcset="">
-                <small>Happy</small>
+                <small>Satisfied</small>
             </div>
         </div>
         <button class="btn" id="send">Send Review</button>
